# Copyright 2014 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("vm") {
  output_name = "elang_vm"

  sources = [
    "class.cc",
    "class.h",
    "collectable.cc",
    "collectable.h",
    "entry_point.h",
    "factory.cc",
    "factory.h",
    "machine_code_builder_impl.cc",
    "machine_code_builder_impl.h",
    "machine_code_function.cc",
    "machine_code_function.h",
    "memory_pool.cc",
    "memory_pool.h",
    "namespace.cc",
    "namespace.h",
    "namespace_member.cc",
    "namespace_member.h",
    "node.cc",
    "node.h",
    "virtual_memory.h",
  ]

  defines = [ "ELANG_TARGET_ARCH_X64" ]

  public_deps = [
    "//base",
    "//elang/base",
  ]

  if (is_win) {
    sources += [
      "platform/virtual_memory_win.h",
      "platform/virtual_memory_win.cc",
    ]
  }
}

source_set("test_support") {
  testonly = true
  public_deps = [
    "//testing/gtest",
    "//elang/api",
    ":vm",
  ]
}

source_set("vm_unittests") {
  testonly = true
  sources = [
    "machine_code_builder_impl_unittest.cc",
    "namespace_unittest.cc",
  ]
  defines = [ "ELANG_TARGET_ARCH_X64" ]
  public_deps = [
    ":test_support",
  ]
}

test("elang_vm_unittests") {
  sources = [
  ]

  deps = [
    "//base/test:run_all_unittests",
    ":vm_unittests",
  ]
}
