# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("analysis") {
  sources = [
    "analysis.cc",
    "analysis.h",
    "analysis_editor.cc",
    "analysis_editor.h",
    "analyzer.cc",
    "analyzer.h",
    "class_analyzer.cc",
    "class_analyzer.h",
    "const_expr_analyzer.cc",
    "const_expr_analyzer.h",
    "method_analyzer.cc",
    "method_analyzer.h",
    "method_resolver.cc",
    "method_resolver.h",
    "name_resolver.cc",
    "name_resolver.h",
    "name_tree_builder.cc",
    "name_tree_builder.h",
    "namespace_analyzer.cc",
    "namespace_analyzer.h",
    "type_evaluator.cc",
    "type_evaluator.h",
    "type_factory.cc",
    "type_factory.h",
    "type_factory_user.cc",
    "type_factory_user.h",
    "type_resolver.cc",
    "type_resolver.h",
    "type_values.cc",
    "type_values.h",
    "type_values_forward.h",
    "variable_tracker.cc",
    "variable_tracker.h",
  ]

  public_deps = [
    "//base",
    "//elang/base",
    "//elang/compiler/ast",
    "//elang/compiler/semantics",
  ]
}

source_set("compiler_analysis_test") {
  testonly = true
  sources = [
    "class_analyzer_test.cc",
    "method_analyzer_test.cc",
    "namespace_analyzer_test.cc",
    "name_resolver_test.cc",
    "name_tree_builder_test.cc",
  ]
  public_deps = [
    "//testing/gtest",
    ":analysis",
  ]
}
