# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("analyze") {
  sources = [
    "analyzer.cc",
    "analyzer.h",
    "class_analyzer.cc",
    "class_analyzer.h",
    "method_analyzer.cc",
    "method_analyzer.h",
    "method_resolver.cc",
    "method_resolver.h",
    "namespace_analyzer.cc",
    "namespace_analyzer.h",
    "name_resolver.cc",
    "name_resolver.h",
    "type_factory.cc",
    "type_factory.h",
    "type_resolver.cc",
    "type_resolver.h",
    "type_unifyer.cc",
    "type_unifyer.h",
    "type_values.cc",
    "type_values.h",
    "type_values_forward.h",
    "variable_tracker.cc",
    "variable_tracker.h",
  ]

  public_deps = [
    "//base",
    "//elang/base",
    "//elang/compiler/ast",
    "//elang/compiler/ir",
  ]
}

source_set("compiler_analyze_test") {
  testonly = true
  sources = [
    "class_analyzer_unittest.cc",
    "method_analyzer_unittest.cc",
    "namespace_analyzer_unittest.cc",
    "name_resolver_unittest.cc",
  ]
  public_deps = [
    "//testing/gtest",
    ":analyze",
  ]
}

