# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("ast") {
  sources = [
    "class.cc",
    "class.h",
    "container_node.cc",
    "container_node.h",
    "enum.cc",
    "enum.h",
    "expressions.cc",
    "expressions.h",
    "factory.cc",
    "factory.h",
    "method.cc",
    "method.h",
    "namespace.cc",
    "namespace.h",
    "nodes.cc",
    "nodes.h",
    "nodes_forward.h",
    "statements.cc",
    "statements.h",
    "visitor.cc",
    "visitor.h",
    "with_modifiers.cc",
    "with_modifiers.h",
  ]

  deps = [
    "//base",
    "//elang/base",
  ]
}
