# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("cg") {
  sources = [
    "cfg_to_ssa_converter.cc",
    "cfg_to_ssa_converter.h",
    "code_generator.cc",
    "code_generator.h",
    "type_mapper.cc",
    "type_mapper.h",
    "variable_analyzer.cc",
    "variable_analyzer.h",
    "variable_usages.cc",
    "variable_usages.h",
  ]

  public_deps = [
    "//base",
    "//elang/base",
    "//elang/compiler/ast",
    "//elang/compiler/semantics",
    "//elang/hir",
  ]
}

source_set("cg_testing") {
  testonly = true
  sources = [
    "cg_test.cc",
    "cg_test.h",
  ]
  public_deps = [
    "//testing/gtest",
    ":cg",
  ]
}

source_set("compiler_cg_test") {
  testonly = true
  sources = [
    "cfg_to_ssa_converter_unittest.cc",
    "code_generator_unittest.cc",
    "type_mapper_unittest.cc",
  ]
  public_deps = [
    ":cg_testing",
  ]
}
