# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("ir") {
  sources = [
    "formatters/text_formatter.cc",
    "formatters/text_formatter.h",
    "nodes.cc",
    "nodes.h",
    "nodes_forward.h",
    "factory.cc",
    "factory.h",
    "visitor.cc",
    "visitor.h",
  ]

  public_deps = [
    "//base",
    "//elang/base",
  ]
}

source_set("compiler_ir_test") {
  testonly = true
  sources = [
    "nodes_unittest.cc",
  ]
  public_deps = [
    "//testing/gtest",
    ":ir",
  ]
}
