# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("semantics") {
  visibility = [
    ":*",
    "../*",
  ]
  sources = [
    "calculator.cc",
    "calculator.h",
    "editor.cc",
    "editor.h",
    "factory.cc",
    "factory.h",
    "nodes.cc",
    "nodes.h",
    "nodes_forward.h",
    "node_printers.cc",
    "visitor.cc",
    "visitor.h",
  ]

  public_deps = [
    "//base",
    "//elang/base",
  ]
}

source_set("test_files") {
  visibility = [ "//elang/compiler:test_files" ]
  testonly = true
  sources = [
    "nodes_test.cc",
  ]
  public_deps = [
    ":semantics",
    "//testing/gtest",
  ]
}
