# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("translate") {
  sources = [
    "builder.cc",
    "builder.h",
    "translate.cc",
    "translator.cc",
    "translator.h",
    "type_mapper.cc",
    "type_mapper.h",
  ]

  defines = [ "TRANSLATOR_IMPLEMENTATION" ]

  public_deps = [
    "//base",
    "//elang/base",
    "//elang/compiler/ast",
    "//elang/compiler/semantics",
    "//elang/optimizer",
  ]
}

source_set("test_support") {
  visibility = [ ":*" ]
  testonly = true
  sources = [
    "translate_test.cc",
    "translate_test.h",
  ]
  public_deps = [
    ":translate",
    "//elang/api",
    "//elang/compiler:test_support",
  ]
}

source_set("test_files") {
  visibility = [ "//elang/compiler:test_files" ]
  testonly = true
  sources = [
    "translator_test.cc",
    "type_mapper_test.cc",
  ]
  public_deps = [
    ":test_support",
  ]
}
